<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="2"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#551947"
            android:drawablePadding="20dp"
            android:padding="20dp"
            android:textStyle="bold"
            android:text="@string/fly_to_seoul"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_vector" />

        <TextView
            android:id="@+id/h1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#551947"
            android:drawablePadding="20dp"
            android:textStyle="bold"
            android:padding="20dp"
            android:text="@string/_1_adult_economy"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableBottomCompat="@drawable/ic_line_1"
            app:drawableStartCompat="@drawable/ic_carbon_user_filled" />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/h1"
            android:background="#551947"
            android:drawablePadding="20dp"
            android:padding="20dp"
            android:textStyle="bold"
            android:text="@string/seoul_korea"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableBottomCompat="@drawable/ic_line_1"
            app:drawableStartCompat="@drawable/ic_gridicons_location" />

        <TextView
            android:id="@+id/Destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location"
            android:background="#551947"
            android:drawablePadding="20dp"
            android:padding="20dp"
            android:textStyle="bold"
            android:text="@string/seoul_korea"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableBottomCompat="@drawable/ic_line_1"
            app:drawableStartCompat="@drawable/ic_baseline_flight" />

        <TextView
            android:id="@+id/Dates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Destination"
            android:background="#551947"
            android:drawablePadding="20dp"
            android:padding="20dp"
            android:textStyle="bold"
            android:text="@string/select_dates"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableBottomCompat="@drawable/ic_line_1"
            app:drawableStartCompat="@drawable/ic_bx_bx_calendar" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white">

        <TextView
            android:id="@+id/tvExploreFlights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textStyle="bold"
            android:text="@string/explore_filght_by_destination"
            android:textColor="#C2C2C2" />

        <ImageView
            android:id="@+id/ivKhumbuValley"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/khumbu_valley" />

        <TextView
            android:id="@+id/tvNepal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvExploreFlights"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:layout_toEndOf="@id/ivKhumbuValley"
            android:text="@string/khumbu_valley_nepal"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvNepal"
            android:layout_marginEnd="50dp"
            android:textStyle="bold"
            android:layout_toEndOf="@id/ivKhumbuValley"
            android:text="@string/nonstop_5h_16m"
            android:textColor="#C2C2C2"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <ImageView
            android:id="@+id/ivMaldavies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivKhumbuValley"
            android:layout_margin="30dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/maldives" />

        <TextView
            android:id="@+id/tvAsia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvNepal"
            android:layout_marginTop="120dp"
            android:textStyle="bold"
            android:layout_toEndOf="@id/ivKhumbuValley"
            android:text="@string/maldavies_south_asia"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvTime1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAsia"
            android:layout_marginEnd="50dp"
            android:layout_toEndOf="@id/ivKhumbuValley"
            android:text="@string/nonstop_8h_24m"
            android:textColor="#C2C2C2"
            android:textSize="10sp" />
    </RelativeLayout>

</LinearLayout>